# tiered-prompts

./: demo_mcp_server.py  deploy_mcp_server.py  health_check.py  simple_test.py  test_fastmcp.sh  test_fastmcp_tools.py  test_mcp_server.py  test_mcp_server_old.py  test_venv.py
ai_docs/: phase1.md  phase2.md  phase3.md  phase4.md  plan.md  rules1.md  rules2.md  rules3.md  rules4.md
ai_prompt_system/: .gitignore  README.md  main.py  requirements.txt  test_phase2.py
ai_prompt_system/database/: prompt_system.db
ai_prompt_system/database/migrations/: 003_add_categories_table.sql
ai_prompt_system/src/: __init__.py
ai_prompt_system/src/database/: __init__.py  connection.py  crud.py  migrations.py  schema.sql  seed_data.py  validation.py
ai_prompt_system/src/rule_engine/: __init__.py  cache.py  engine.py  export.py  resolver.py  template.py  validation.py
ai_prompt_system/tests/: test_phase1.py
ai_prompt_system/tests/rule_engine/: test_rule_engine.py
database/: prompt_system.db
mcp_server/: README.md  __init__.py  claude_desktop_config.json  claude_desktop_setup.md  config.yaml  config_production.yaml  fastmcp_server.py  health_report.json  http_wrapper.py  integration_test_cases.json  performance_baseline.json  prepare_phase3_3.py  pyproject.toml  requirements.txt  server.py  start_http.sh  start_server.py  test_integration.py
mcp_server/utils/: config.py  health_check.py  monitoring.py
web_interface/: README.md
web_interface/backend/: .gitignore  requirements.txt
web_interface/frontend/: .gitignore  package.json  pnpm-lock.yaml  tailwind.config.js
(+27 files in other folders)
