[project]
name = "ai-prompt-engineering-mcp-server"
version = "0.1.0"
description = "AI Prompt Engineering System MCP Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.10.1",
    "pydantic>=2.11.7",
    "jinja2>=3.1.6",
    "httpx>=0.28.1",
    "uvicorn>=0.35.0",
    "pyyaml>=6.0",
    "fastapi>=0.115.14",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=0.15",
    "black>=25.1.0",
    "flake8>=7.3.0",
    "mypy>=1.16.1",
]
